# telegram_categorization

./: README.md
notebooks/helper/: Validate Category.ipynb  Validate Language.ipynb  View data.ipynb
notebooks/training/: FastText.ipynb  MobileBert.ipynb
resources/fasttext/: dc0130-input.txt  fasttext  models  o1k-ft.txt  output-1k-ftz.txt  output-1k.txt  output-2k-ftz.txt  output-2k.txt
resources/libtgcat/: CMakeLists.txt  tgcat.c  tgcat.h
resources/libtgcat-tester/: CMakeLists.txt  tester.c
resources/misc/: fasttext-supported-languages-list-2-letter.txt  fasttext-supported-languages-list-3-letter.txt  fasttext-supported-languages-list.txt  wikipedia-languages-list-2-letter.txt  wikipedia-languages-list-3-letter.txt
resources/models/: category_en  category_ru  language  sl_category_en  sl_category_ru  sl_language
resources/test-data/: data-twitter.txt
src/libtgcat/: CMakeLists.txt  cache.hpp  config.hpp  language_predictor.cpp  language_predictor.hpp  libfasttext.so.0  predictor.cpp  predictor.hpp  preprocessor.cpp  preprocessor.hpp  tg.hpp  tgcat.cpp  tgcat.hpp  utils.hpp
src/libtgcat/fasttext/: CMakeLists.txt  sample.txt
